login/logout fixed

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
-MONGO_URL = mongodb+srv://SnubArtifact:tanmay2006@cluster0.oczjmw5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT = 5000;
+MONGO_URL = mongodb+srv://admin:zephyrus22@excel-analyzer.ke1o2w8.mongodb.net/?retryWrites=true&w=majority&appName=excel-analyzer
+PORT = 5001
 JWT_SECRET=lmaoitsmysecretkey
-
 JWT_EXPIRE=30d
 CLIENT_URL=http://localhost:5173
