--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "animejs": "^4.0.2",
     "axios": "^1.9.0",
+    "framer-motion": "^12.18.1",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
@@ -19,7 +21,7 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0",
+    "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
