--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "@tailwindcss/vite": "^4.1.7",
     "animejs": "^4.0.2",
     "axios": "^1.9.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
+    "echarts-gl": "^2.0.9",
     "framer-motion": "^12.18.1",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
