docker pipeline test 2

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: 🧱 Build & Push Docker Images
         run: |
-          docker-compose -f docker-compose.yml build
+          docker compose -f docker-compose.yml build
 
       - name: ✅ Run Backend Tests (if any)
         run: |
