docker pipeline test 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   backend:
     build: ./backend
+    image: zephyr2/backend-xlyzer
     ports:
       - "5001:5001"
     environment:
@@ -11,8 +12,9 @@ services:
 
   frontend:
     build: ./frontend
+    image: zephyr2/frontend-xlyzer
     ports:
-      - "3000:80"
+      - "5173:80"
     depends_on:
       - backend
     volumes:
