--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ PORT = 5000;
 JWT_SECRET= your_jwt_secret_here
 JWT_EXPIRE=30d
 CLIENT_URL=http://localhost:5173
+GOOGLE_GEMINI_API_KEY=your_gemini_api_key_here
